safer remove highlight function. Typo fixes

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
-	"applications": {
+	"browser_specific_settings": {
 		"gecko": {
 			"id": "achille.talon@gmail.com",
-			"strict_min_version": "52.0"
+			"strict_min_version": "79.0"
 		}
 	},
 	"author": "Nicolas Crouzier",
