MacCtrl default shortkey

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -37,7 +37,8 @@
 	"commands": {
 		"search-feature": {
 		  "suggested_key": {
-			"default": "Ctrl+S"
+			"default": "Ctrl+S",
+			"mac": "MacCtrl+S"
 		  },
 		  "description": "Refresh the search"
 		}
